@startuml

title __CONTROLLERS's Class Diagram__\n

  namespace ethanmmd.mastermind {
    namespace controllers {
      abstract class ethanmmd.mastermind.controllers.AcceptorController {
          {abstract} + accept()
          ~ AcceptorController()
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace controllers {
      class ethanmmd.mastermind.controllers.ActionController {
          + ActionController()
          + addProposedCombination()
          + getAttempts()
          + getProposedCombination()
          + getResult()
          + isLooser()
          + isWinner()
          + next()
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace controllers {
      abstract class ethanmmd.mastermind.controllers.Controller {
          + getGameStatus()
          ~ Controller()
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace controllers {
      interface ethanmmd.mastermind.controllers.ControllerVisitor {
          {abstract} + visit()
          {abstract} + visit()
          {abstract} + visit()
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace controllers {
      class ethanmmd.mastermind.controllers.Logic {
          # controllerMap : Map<GameStatus, AcceptorController>
          + Logic()
          + getController()
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace controllers {
      abstract class ethanmmd.mastermind.controllers.ProposalController {
          + ProposalController()
          + accept()
          {abstract} + addProposedCombination()
          {abstract} + getAttempts()
          {abstract} + getProposedCombination()
          {abstract} + getResult()
          {abstract} + isLooser()
          {abstract} + isWinner()
          {abstract} + next()
          {abstract} + redo()
          {abstract} + redoable()
          {abstract} + undo()
          {abstract} + undoable()
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace controllers {
      class ethanmmd.mastermind.controllers.RedoController {
          + RedoController()
          + redo()
          + redoable()
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace controllers {
      abstract class ethanmmd.mastermind.controllers.ResumeController {
          + ResumeController()
          + accept()
          {abstract} + resume()
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace controllers {
      abstract class ethanmmd.mastermind.controllers.StartController {
          + StartController()
          + accept()
          {abstract} + start()
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace controllers {
      class ethanmmd.mastermind.controllers.UndoController {
          + UndoController()
          + undo()
          + undoable()
      }
    }
  }
  

  ethanmmd.mastermind.controllers.AcceptorController -up-|> ethanmmd.mastermind.controllers.Controller
  ethanmmd.mastermind.controllers.ActionController -up-|> ethanmmd.mastermind.controllers.Controller
  ethanmmd.mastermind.controllers.ActionController o-- ethanmmd.mastermind.models.SessionImplementation : sessionImplementation
  ethanmmd.mastermind.controllers.Controller o-- ethanmmd.mastermind.models.Session : session
  ethanmmd.mastermind.controllers.Logic o-- ethanmmd.mastermind.models.Session : session
  ethanmmd.mastermind.controllers.ProposalController -up-|> ethanmmd.mastermind.controllers.AcceptorController
  ethanmmd.mastermind.controllers.RedoController -up-|> ethanmmd.mastermind.controllers.Controller
  ethanmmd.mastermind.controllers.RedoController o-- ethanmmd.mastermind.models.SessionImplementation : sessionImplementation
  ethanmmd.mastermind.controllers.ResumeController -up-|> ethanmmd.mastermind.controllers.AcceptorController
  ethanmmd.mastermind.controllers.StartController -up-|> ethanmmd.mastermind.controllers.AcceptorController
  ethanmmd.mastermind.controllers.UndoController -up-|> ethanmmd.mastermind.controllers.Controller
  ethanmmd.mastermind.controllers.UndoController o-- ethanmmd.mastermind.models.SessionImplementation : sessionImplementation


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
